cilium-networkpolicies/argocd-networkpolicies/netpol-argocd-to-host.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-argocd-to-host
  namespace: argocd
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - argocd-application-controller
          - argocd-applicationset-controller
          - argocd-dex-server
          - argocd-notifications-controller
          - argocd-server
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
